Updated reference with link to article.

--- a/README.Rmd
+++ b/README.Rmd
@@ -26,7 +26,7 @@ The functions should be run in the order shown in the example below. They prepar
 
 Reference
 
-Curtis-Ham S., Bernasco, W., Medvedev, O. N., & Polaschek, D. L. L (2022). 'A new geographic profiling method for mapping and ranking suspects in crime investigations: GP-SMART'. Journal of Investigative Psychology and Offender Profiling.
+Curtis-Ham S., Bernasco, W., Medvedev, O. N., & Polaschek, D. L. L (2022). 'A new geographic profiling method for mapping and ranking suspects in crime investigations: GP-SMART'. Journal of Investigative Psychology and Offender Profiling. https://doi.org/10.1002/jip.1585
 
 ## Installation
 
